--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,10 @@
 services:
 
   app:
+    build:
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     command: npm run dev
+    volumes:
+      - ./app:/app
