--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
 
   app:
+    image: itelmenko/devops-for-programmers-project-74
     build:
       context: .
       dockerfile: Dockerfile.production
