--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,16 @@ services:
       args:
         - UID=${LOCAL_UID:-1000}
         - GID=${LOCAL_GID:-1000}
+    environment:
+      DATABASE_HOST: "${DATABASE_HOST}"
+      DATABASE_USERNAME: "${DATABASE_USERNAME}"
+      DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15.4-alpine3.18
+    environment:
+      POSTGRES_USER: "${DATABASE_USERNAME}"
+      POSTGRES_PASSWORD: "${DATABASE_PASSWORD}"
+      POSTGRES_DB: "${DATABASE_NAME}"
